# mygpo-clone

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  go.mod  go.sum  init.sql  pyproject.toml
cmd/: main.go
cmd/api/: main.go
config/: config.go  config_test.go
internals/: routes.go  sqlc.yaml
internals/app/: app.go
internals/auth/: controller.go  schemas.go  service.go
internals/controllers/: auth_controller.go  directory_controller.go
internals/database/: episodes_queries.sql.go  models.go  podcast_queries.sql.go  queries.sql.go  tag_queries.sql.go  user_queries.sql.go
internals/directory/: controller.go
internals/episode/: repository.go  service.go
internals/podcast/: repository.go  service.go
internals/repositories/: tag_repository.go  user_repository.go
internals/schemas/: auth.go  user.go
internals/services/: auth_service.go  tag_service.go
internals/sql/: queries.sql  schemas.sql
internals/tags/: repository.go  service.go
internals/users/: repository.go
src/: app.py  config.py  database.py  dependecies.py  main.py  security.py
src/auth/: controller.py  schemas.py  service.py  urls.py  utils.py
src/crud/: authentication.py  device.py
src/directory/: controller.py  urls.py
src/models/: __init__.py  device.py  episode.py  listening_history.py  podcast.py  podcastlist.py  podcasttag.py  subscription.py  tag.py  user.py  user_list.py
src/person/: guards.py  models.py  repository.py  service.py
src/podcast/: dto.py  models.py  repository.py  service.py
test/: auth_test.go  config_test.go  dir_test.go  directory_test.go  utils.go
tests/: test_auth.py
(+36 files in other folders)
